README: minor edit

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-General Information
-===================
+BEAST & BSE
+===========
 
 This is the development version of Beast & Bse. BEAST is the BSE
 Equipped Audio Synthesizer and Tracker, and BSE is the Beast Sound Engine.
