--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Overview of Changes in BEAST/BSE 0.9.2:		(2015-09-16)
+
+* Workarounds were added for broken GLib compatibility.
+* Files for the BSE runtime are now compressed and stored via rapidres(1).
+* A good chunk of the Beast & Bse API has been migrated to use Rapicorn's AIDA IDL.
+* The complexity of the BSE startup process could be reduced.
+* A workaround for crashes in vorbisfile-1.3.4 and earlier was added.
+* Shutdown crashes were fixed by stopping BSE threads via atexit.
+* A new bse tool with commands check-load and render2wav replaces SCM scripts.
+* Lots of fixes and optimizations for parallel builds were applied.
+* All files are now installed under versioned directories, e.g. /usr/share/beast-0.9/
+* Execute audio tests with 'make check' for development versions.
+
 Overview of Changes in BEAST/BSE 0.9.0:		(2014-10-28)
 
 * Fixed missing includes. [stw]
