--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,27 @@
+Beast 0.10.0:					(2016-04-06)
+
+* Memory leak and stability fixes.
+* Removal of deprecated Glib/Gtk+ functions.
+* A new binary 'bsetool' subsumes several old utilities.
+* Removal of unused utilities and several places with dead code.
+* Several classes are now (fully) ported to new AIDA IDL: SNet Track
+  TrackPart Bus SampleFileInfo Project MusicalTuning NoteDescription Icon
+* More porting work to use Rapicorn C++11 utilities.
+* Fixes for g++-4.9 which has become a hard dependency.
+* Support and use the TAP protocol for unit test evaluation.
+* New versioning: Releases increase MAJOR for major API changes.
+* New versioning: Releases increase MINOR in case of any ABI breaks.
+* New versioning: Releases increase MICRO for backwards compatibility.
+* Now libbse supports parallel installation of runtime library packages.
+* Now various program and module installation paths include MAJOR.
+* Fix build issues with external libbse plugins.
+* Fix LADSPAv1 plugin registration failing to detect some plugins.
+* Provide C++11 API for undo/redo functions.
+* Add pybse API wrapper that allows Python to 'import Bse'.
+* Start a Python interpreter from Beast.
+* Split up Beast main() methods to run event loop from Python.
+* Port libbse to use C++11 scoped enums.
+
 Overview of Changes in BEAST/BSE 0.9.2:		(2015-09-16)
 
 * Workarounds were added for broken GLib compatibility.
