--- a/docs/main.dox
+++ b/docs/main.dox
@@ -6,11 +6,11 @@
 - <a href="beast-ChangeLog.html"><b>ChangeLog</b></a> - Beast Development ChangeLog
 
 @section manpages Manual Pages
-- <a href="man1/beast.1.html"><b>Beast</b></a> - BSE Equipped Audio Synthesizer and Tracker
-- <a href="man1/bsewavetool.1.html"><b>Bsewavetool</b></a> - A tool for editing the native multisample format of Beast and Bse
-- <a href="man5/bse.5.html"><b>BSE</b></a> - Beast Sound Engine (file format)
-- <a href="man1/bsescm.1.html"><b>Bsescm</b></a> - BSE Scheme Shell
-- <a href="man1/sfidl.1.html"><b>Sfidl</b></a> - SFI IDL Compiler
+- <a href="man/beast.1.html"><b>Beast</b></a> - BSE Equipped Audio Synthesizer and Tracker
+- <a href="man/bsewavetool.1.html"><b>Bsewavetool</b></a> - A tool for editing the native multisample format of Beast and Bse
+- <a href="man/bse.5.html"><b>BSE</b></a> - Beast Sound Engine (file format)
+- <a href="man/bsescm.1.html"><b>Bsescm</b></a> - BSE Scheme Shell
+- <a href="man/sfidl.1.html"><b>Sfidl</b></a> - SFI IDL Compiler
 
 @section weblinks Online Resources
 
