--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,26 @@
+Beast 0.11.0~rc1:				(2017-06-13)
+
+* Added Soundfont support so Beast can play .sf2 files [stw]
+* Execute the DSP engine multi threaded with `nproc` many threads.
+* The startup time could be reduced significantly.
+* Build all plugins with SIMD support always enabled.
+* Started alternate HTML/JS GUI based on electron.
+* Improved IDL representation of old procedure types.
+* Removed guile dependency.
+* Removed 'extern "C"' left overs
+* Fixed NULL string crashes [stw]
+* Fixed signedness bug in FFT windowing [stw]
+* Improved generated documentation.
+* Sources were ported to Kubuntu-16-04	[stw]
+* Manual pages are updated and are converted to Markdown.
+* Improvded diagnostics, build and audio testing toolchains.
+* Fixed MIDI voice allocations taht could lead to premature voice shortages.
+* Majorly improved Docker build setup.
+* Require srcdir=destdir upon distcheck.
+* Tarball/git dependencies now include Rapicorn 16.0.2~rc1.
+* The Beast project now provides Debian binary packages at:
+  https://testbit.eu/pub/dists/beast/debs
+
 Beast 0.10.0:					(2016-04-07)
 
 * Memory leak and stability fixes.
