--- a/docs/main.dox
+++ b/docs/main.dox
@@ -1,4 +1,4 @@
-// Licensed GNU LGPL v3 or later, see: www.gnu.org
+// Licensed GNU LGPL v2.1 or later: http://www.gnu.org/licenses/lgpl.html
 /*! @mainpage
 
 @section documents Documents
