BLEPOSC: remove old code
Signed-off-by: Stefan Westerfeld <stefan@space.twc.de>

--- a/plugins/bleposc/TODO
+++ b/plugins/bleposc/TODO
@@ -1,5 +1,8 @@
 - seek: slope approximation
+- do we need oversampling?
 
+PERF:
+- specializations
 - sync specialization
 - possible table-of-exp2
 
