--- a/plugins/bleposc/TODO
+++ b/plugins/bleposc/TODO
@@ -1,10 +1,8 @@
-- seek: slope approximation
-- do we need oversampling?
+QUALITY:
+- seek: slope approximation could improve initial conditions
 
 PERF:
-- specializations
+- specializations for input channels which are not connected
+- speed up dc computation
 - sync specialization
 - possible table-of-exp2
-
-OLD:
-dc subsampling
