NEWS: add warning for using alpha versions from the master branch
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+== Beast 0.13.0-alpha:
+
+[.caution]
+_Note: This is the master branch of Beast, which contains alpha version software.
+Beware of file format instabilities and report any bugs you find in it._
+
+
 == Beast 0.12.0:					(2018-08-20)
 
 .System Requirements
